# distributed-in-memory-kv-store

./: CMakeLists.txt  README.md  store.h
bench/: benchmark.sh
src/: eviction.cpp  eviction.h  main.cpp  platform.h  rdb.cpp  rdb.h  replica_client  replica_client.h  replication.cpp  replication.h  resp.cpp  resp.h  server.cpp  server.h  store.cpp  store.h  wal.cpp  wal.h
tests/: test_all.cpp
